istio-install/06_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cupcake-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 81
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cupcake
spec:
  hosts:
  - "*"
  gateways:
  - cupcake-gateway
  http:
  - match:
    - uri:
        prefix: /execute
    route:
    - destination:
        host: client-svc
        port:
          number: 80
